# curryrs

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  curryrs.cabal
haskell-tests/: Test.hs
rtest/src/: lib.rs
src/: Convert.hs  Curryrs.hs  Types.hs  lib.rs  types.rs
tests/: test.hs
