[package]
name = "curryrs"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]

# These are needed for the Haskell source code
# but are dead weight for the Rust Package
exclude = [
    "rtest",
    "haskell-tests",
    "Setup.hs",
    "stack.yaml",
    "curryrs.cabal",
    "Makefile"
]

[dependencies]
