name:                curryrs
version:             0.1.0.0
synopsis:            Easy to use FFI Bridge for using Rust in Haskell
description:         Please see README.md
homepage:            https://github.com/mgattozzi/curryrs#readme
license:             OtherLicense
license-files:       LICENSE-MIT, LICENSE-APACHE
author:              Michael Gattozzi
maintainer:          mgattozzi@gmail.com
copyright:           2016 Michael Gattozzi
category:            FFI
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Curryrs
  other-extensions:    ForeignFunctionInterface
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall -Werror -static -lcurryrs -Ltarget/debug -lpthread
  default-language:    Haskell2010

test-suite curryrs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  other-extensions:    ForeignFunctionInterface
  main-is:             test.hs
  build-depends:       base
                     , curryrs
                     , tasty >= 0.11
                     , tasty-hunit >= 0.9.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -static -lcurryrs -Ltarget/release -lpthread
  default-language:    Haskell2010

benchmark curryrs-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benches
  main-is:             Benches.hs
  build-depends:       base
                     , curryrs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -static -lcurryrs -Ltarget/release -lpthread
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mgattozzi/curryrs
